@@ -25,7 +25,7 @@ import stroom.data.store.api.Target;
 import stroom.meta.mock.MockMetaService;
 import stroom.meta.shared.FindMetaCriteria;
 import stroom.meta.shared.Meta;
-import stroom.meta.shared.MetaProperties;
+import stroom.meta.api.MetaProperties;
 import stroom.util.io.StreamUtil;
 
 import java.io.IOException;
@@ -70,7 +70,7 @@ class TestMockStreamStore {
 
         assertThat(mockMetaService.find(FindMetaCriteria.createFromMeta(meta)).size()).isEqualTo(1);
 
-        final Meta reload = mockMetaService.find(FindMetaCriteria.createFromMeta(meta)).get(0);
+        final Meta reload = mockMetaService.find(FindMetaCriteria.createFromMeta(meta)).getFirst();
 
         try (final Source streamSource = mockStreamStore.openSource(reload.getId())) {
             try (final InputStreamProvider inputStreamProvider = streamSource.get(0)) {
